--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
     background-color: #373a0a;
-    width: 1024px;
+    width: 70%;
     position: relative;
     margin-left: auto;
     margin-right: auto;
